# sqlite-cmake

./: CI_SETUP.md  CMakeLists.txt  LICENSE  README.md  test_example.sh
.github/workflows/: ci-public-only.yml  ci.yml
cmake/: NDSSQLite.cmake  PublicSQLite.cmake  SQLiteConfig.cmake
examples/basic/: CMakeLists.txt  main.cpp
